<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/step_detail_fragment_wrapper">
    </FrameLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <Button
            android:id="@+id/previous_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Previous"
            android:onClick="previousStep"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="25sp"
            android:background="@color/colorPrimary"
            android:textColor="#ffffff">
        </Button>
        <View android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1" />
        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Next"
            android:onClick="nextStep"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="25sp"
            android:textColor="#ffffff"
            android:background="@color/colorPrimary">
        </Button>
    </LinearLayout>

</LinearLayout>

