<?xml version="1.0" encoding="utf-8"?>

<fragment
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:name="io.liney.bakingapp.RecipeDetailFragment"
    android:id="@+id/master_list_fragment">
</fragment>